ready for deployment

--- a/packages.html
+++ b/packages.html
@@ -101,7 +101,7 @@
             <li><a href="gallery.html" title="Gallery">Gallery</a></li>
             <li><a href="packages.html" title="Packages">Packages</a></li>
             <li><a href="about_us.html" title="About Us">About Us</a></li>
-            <li><a href="tour_travel.html" title="home">Home</a></li>
+            <li><a href="index.html" title="home">Home</a></li>
             <li style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 20px; color: white; margin-right: 561px; margin-top: 15px;">India Tour & Travel</li>
         </ul>
 
@@ -111,88 +111,88 @@
 
     <div class="cards">
         <div class="gallery">
-            <img class="image" src="6088_new.jpg">
+            <img class="image" src="images/6088_new.jpg">
             <div class="des">kashmir package</div>
         </div>
 
         <div class="gallery">
-            <img class="image" src="/1613460373_shutterstock_1582420654-min.jpg.jpg">
+            <img class="image" src="images/1613460373_shutterstock_1582420654-min.jpg.jpg">
             <div class="des">Ladhak package</div>
         </div>
 
         <div class="gallery">
-            <img class="image" src="/225px-Munnar_hillstation_kerala.jpg">
+            <img class="image" src="images/225px-Munnar_hillstation_kerala.jpg">
             <div class="des">Shimla package</div>
         </div>
 
         <div class="gallery">
-            <img class="image" src="/GettyImages-149353949_high.jpg">
+            <img class="image" src="images/GettyImages-149353949_high.jpg">
             <div class="des">Himachal package</div>
         </div>
     </div>
 
     <div class="cards">
         <div class="gallery">
-            <img class="image" src="/Best-Places-to-Visit-in-Himachal-Pradesh-750x430.jpg">
+            <img class="image" src="images/Best-Places-to-Visit-in-Himachal-Pradesh-750x430.jpg">
             <div class="des">Jammu package</div>
         </div>
 
         <div class="gallery">
-            <img class="image" src="/d3451114ab4e1d55ead624930bcff60c (1).jpg">
+            <img class="image" src="images/d3451114ab4e1d55ead624930bcff60c (1).jpg">
             <div class="des">Jammu & Kashmir package</div>
         </div>
 
         <div class="gallery">
-            <img class="image" src="/GettyImages-149353949_high.jpg">
+            <img class="image" src="images/GettyImages-149353949_high.jpg">
             <div class="des">Manali package</div>
         </div>
 
         <div class="gallery">
-            <img class="image" src="/gettyimages-169546647-612x612.jpg">
+            <img class="image" src="images/gettyimages-169546647-612x612.jpg">
             <div class="des">Haridwar package</div>
         </div>
     </div>
 
     <div class="cards">
         <div class="gallery">
-            <img class="image" src="/Houseboat.avif">
+            <img class="image" src="images/Houseboat.avif">
             <div class="des">Goa package</div>
         </div>
 
         <div class="gallery">
-            <img class="image" src="/images (1).jpg">
+            <img class="image" src="images/images (1).jpg">
             <div class="des">Kolkata package</div>
         </div>
 
         <div class="gallery">
-            <img class="image" src="/India-and-Kerala-Connection-Banner-image-backwaters.jpg">
+            <img class="image" src="images/India-and-Kerala-Connection-Banner-image-backwaters.jpg">
             <div class="des">Kelera package</div>
         </div>
 
         <div class="gallery">
-            <img class="image" src="/istockphoto-1055452170-170667a.jpg">
+            <img class="image" src="images/istockphoto-1055452170-170667a.jpg">
             <div class="des">Gujarat package</div>
         </div>
     </div>
 
     <div class="cards">
         <div class="gallery">
-            <img class="image" src="/photo-1619837374214-f5b9eb80876d.jpg">
+            <img class="image" src="images/photo-1619837374214-f5b9eb80876d.jpg">
             <div class="des">Maharastra package</div>
         </div>
 
         <div class="gallery">
-            <img class="image" src="/pexels-photo-3633950.jpeg">
+            <img class="image" src="images/pexels-photo-3633950.jpeg">
             <div class="des">Meghalaya package</div>
         </div>
 
         <div class="gallery">
-            <img class="image" src="/Shimla-1200-1.jpg">
+            <img class="image" src="images/Shimla-1200-1.jpg">
             <div class="des">Assam package</div>
         </div>
 
         <div class="gallery">
-            <img class="image" src="/shimla-himachal-pradesh-india-july-260nw-1073065766.webp">
+            <img class="image" src="images/quino-al-mBQIfKlvowM-unsplash.jpg">
             <div class="des">Puducherry package</div>
         </div>
     </div>
@@ -201,7 +201,7 @@
         <div>
             <h4 style="color: white; padding: 80px 0px 0px 200px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; ">IN THE MAIN SECTION</h4>
             <ul class="footer_list">
-                <li><a href="tour_travel.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about_us.html">About Us</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="packages.html">Packages</a></li>
@@ -222,11 +222,11 @@
         <div>
             <h4 style="color: white; padding: 80px 0px 0px 200px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; ">SOCIAL MEDIA</h4>
             <ul class="footer_list" style="display:inline-flex;">
-                <li style="margin: 5px;"><img src="/instagram.jpg" style="height: 40px; width: 40px;"></li>
-                <li style="margin: 5px;"><img src="/facebook.png" style="height: 40px; width: 40px;"></li>
-                <li style="margin: 5px;"><img src="/linkedin.png" style="height: 40px; width: 40px;"></li>
-                <li style="margin: 5px;"><img src="/pintrest.jpg" style="height: 40px; width: 40px;"></li>
-                <li style="margin: 5px;"><img src="/twitter.png" style="height: 40px; width: 40px;"></li>
+                <li style="margin: 5px;"><img src="images/instagram.jpg" style="height: 40px; width: 40px;"></li>
+                <li style="margin: 5px;"><img src="images/facebook.png" style="height: 40px; width: 40px;"></li>
+                <li style="margin: 5px;"><img src="images/linkedin.png" style="height: 40px; width: 40px;"></li>
+                <li style="margin: 5px;"><img src="images/pintrest.jpg" style="height: 40px; width: 40px;"></li>
+                <li style="margin: 5px;"><img src="images/twitter.png" style="height: 40px; width: 40px;"></li>
             </ul>
         </div>
 
