--- a/about_us.html
+++ b/about_us.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+images<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -78,12 +78,12 @@
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="packages.html">Packages</a></li>
                 <li><a href="about_us.html">About Us</a></li>
-                <li><a href="tour_travel.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 20px; color: white; margin-right: 570px; margin-top: 15px;">India Tour & Travel</li>
             </ul>
         </div>
 
-        <img src="mehrangarh-fort-india-28990085.jpg">
+        <img src="images/mehrangarh-fort-india-28990085.jpg">
 
     </div>
 
@@ -98,11 +98,11 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis hic, totam ex nobis cum odit <br>dignissimos doloremque ullam eligendi, omnis nisi facere minus eaque cumque aperiam possimus voluptatum! Odit, nemo.<br><br><br>
             <b>Social Media : </b><div style="margin: 0px 0px 0px 350px;">
                 <ul class="footer_list" style="display:inline-flex; list-style-type: none;">
-                    <li style="margin: 5px;"><img src="/instagram.jpg" style="height: 40px; width: 40px;"></li>
-                    <li style="margin: 5px;"><img src="/facebook.png" style="height: 40px; width: 40px;"></li>
-                    <li style="margin: 5px;"><img src="/linkedin.png" style="height: 40px; width: 40px;"></li>
-                    <li style="margin: 5px;"><img src="/pintrest.jpg" style="height: 40px; width: 40px;"></li>
-                    <li style="margin: 5px;"><img src="/twitter.png" style="height: 40px; width: 40px;"></li>
+                    <li style="margin: 5px;"><img src="images/instagram.jpg" style="height: 40px; width: 40px;"></li>
+                    <li style="margin: 5px;"><img src="images/facebook.png" style="height: 40px; width: 40px;"></li>
+                    <li style="margin: 5px;"><img src="images/linkedin.png" style="height: 40px; width: 40px;"></li>
+                    <li style="margin: 5px;"><img src="images/pintrest.jpg" style="height: 40px; width: 40px;"></li>
+                    <li style="margin: 5px;"><img src="images/twitter.png" style="height: 40px; width: 40px;"></li>
                 </ul>
             </div>
         </p>
@@ -112,7 +112,7 @@
         <div>
             <h4 style="color: white; padding: 80px 0px 0px 200px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; ">IN THE MAIN SECTION</h4>
             <ul class="footer_list">
-                <li><a href="tour_travel.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about_us.html">About Us</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="packages.html">Packages</a></li>
@@ -133,11 +133,11 @@
         <div>
             <h4 style="color: white; padding: 80px 0px 0px 200px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; ">SOCIAL MEDIA</h4>
             <ul class="footer_list" style="display:inline-flex;">
-                <li style="margin: 5px;"><img src="/instagram.jpg" style="height: 40px; width: 40px;"></li>
-                <li style="margin: 5px;"><img src="/facebook.png" style="height: 40px; width: 40px;"></li>
-                <li style="margin: 5px;"><img src="/linkedin.png" style="height: 40px; width: 40px;"></li>
-                <li style="margin: 5px;"><img src="/pintrest.jpg" style="height: 40px; width: 40px;"></li>
-                <li style="margin: 5px;"><img src="/twitter.png" style="height: 40px; width: 40px;"></li>
+                <li style="margin: 5px;"><img src="images/instagram.jpg" style="height: 40px; width: 40px;"></li>
+                <li style="margin: 5px;"><img src="images/facebook.png" style="height: 40px; width: 40px;"></li>
+                <li style="margin: 5px;"><img src="images/linkedin.png" style="height: 40px; width: 40px;"></li>
+                <li style="margin: 5px;"><img src="images/pintrest.jpg" style="height: 40px; width: 40px;"></li>
+                <li style="margin: 5px;"><img src="images/twitter.png" style="height: 40px; width: 40px;"></li>
             </ul>
         </div>
 
