--- a/contact_us.html
+++ b/contact_us.html
@@ -78,12 +78,12 @@
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="packages.html">Packages</a></li>
                 <li><a href="about_us.html">About Us</a></li>
-                <li><a href="tour_travel.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 20px; color: white; margin-right: 570px; margin-top: 15px;">India Tour & Travel</li>
             </ul>
         </div>
 
-        <img src="iStock504527502_Gwalior_800x2400.jpg">
+        <img src="images/iStock504527502_Gwalior_800x2400.jpg">
 
     </div>
 
@@ -96,17 +96,17 @@
             Uttar Pradesh<br><br><br>
 
             <b>Phone Nos :</b> +10 23654879, +23 65417895<br>
-            <b>email : </b>contact_us@india_tour&travel.com<br><br><br>
+            <b>email : </b>contact_us@india_tour&travel.com<br><br><br>images
 
             <b>Social Media : </b><div style="margin: 0px 200px 0px 0px;">
                 <ul class="footer_list" style="display:inline-flex;">
-                    <li style="margin: 5px;"><img src="/instagram.jpg" style="height: 40px; width: 40px;"></li>
-                    <li style="margin: 5px;"><img src="/facebook.png" style="height: 40px; width: 40px;"></li>
-                    <li style="margin: 5px;"><img src="/linkedin.png" style="height: 40px; width: 40px;"></li>
-                    <li style="margin: 5px;"><img src="/pintrest.jpg" style="height: 40px; width: 40px;"></li>
-                    <li style="margin: 5px;"><img src="/twitter.png" style="height: 40px; width: 40px;"></li>
+                    <li style="margin: 5px;"><img src="images/instagram.jpg" style="height: 40px; width: 40px;"></li>
+                    <li style="margin: 5px;"><img src="images/facebook.png" style="height: 40px; width: 40px;"></li>
+                    <li style="margin: 5px;"><img src="images/linkedin.png" style="height: 40px; width: 40px;"></li>
+                    <li style="margin: 5px;"><img src="images/pintrest.jpg" style="height: 40px; width: 40px;"></li>
+                    <li style="margin: 5px;"><img src="images/twitter.png" style="height: 40px; width: 40px;"></li>
                 </ul>
-            </div>
+            </div>images
         </p>
     </div>
 
@@ -114,7 +114,7 @@
         <div>
             <h4 style="color: white; padding: 80px 0px 0px 200px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; ">IN THE MAIN SECTION</h4>
             <ul class="footer_list">
-                <li><a href="tour_travel.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about_us.html">About Us</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="packages.html">Packages</a></li>
@@ -135,11 +135,11 @@
         <div>
             <h4 style="color: white; padding: 80px 0px 0px 200px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; ">SOCIAL MEDIA</h4>
             <ul class="footer_list" style="display:inline-flex;">
-                <li style="margin: 5px;"><img src="/instagram.jpg" style="height: 40px; width: 40px;"></li>
-                <li style="margin: 5px;"><img src="/facebook.png" style="height: 40px; width: 40px;"></li>
-                <li style="margin: 5px;"><img src="/linkedin.png" style="height: 40px; width: 40px;"></li>
-                <li style="margin: 5px;"><img src="/pintrest.jpg" style="height: 40px; width: 40px;"></li>
-                <li style="margin: 5px;"><img src="/twitter.png" style="height: 40px; width: 40px;"></li>
+                <li style="margin: 5px;"><img src="images/instagram.jpg" style="height: 40px; width: 40px;"></li>
+                <li style="margin: 5px;"><img src="images/facebook.png" style="height: 40px; width: 40px;"></li>
+                <li style="margin: 5px;"><img src="images/linkedin.png" style="height: 40px; width: 40px;"></li>
+                <li style="margin: 5px;"><img src="images/pintrest.jpg" style="height: 40px; width: 40px;"></li>
+                <li style="margin: 5px;"><img src="images/twitter.png" style="height: 40px; width: 40px;"></li>
             </ul>
         </div>
 
