--- a/gallery.html
+++ b/gallery.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+images<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -79,7 +79,7 @@
             <li><a href="gallery.html" title="Gallery">Gallery</a></li>
             <li><a href="packages.html" title="Packages">Packages</a></li>
             <li><a href="about_us.html" title="About Us">About Us</a></li>
-            <li><a href="tour_travel.html" title="home">Home</a></li>
+            <li><a href="index.html" title="home">Home</a></li>
             <li style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 20px; color: white; margin-right: 561px; margin-top: 15px;">India Tour & Travel</li>
         </ul>
 
@@ -88,32 +88,32 @@
     </div>
 
         <div class="gallery">
-            <img src="/1613460373_shutterstock_1582420654-min.jpg.jpg">
-            <img src="/225008.jpg">
-            <img src="/225px-Munnar_hillstation_kerala.jpg">
-            <img src="/6088_new.jpg">
-            <img src="/Best-Places-to-Visit-in-Himachal-Pradesh-750x430.jpg">
-            <img src="d3451114ab4e1d55ead624930bcff60c (1).jpg">
-            <img src="/GettyImages-149353949_high.jpg">
-            <img src="/gettyimages-169546647-612x612.jpg">
-            <img src="/Houseboat.avif">
-            <img src="/images (1).jpg">
-            <img src="/images.jpg">
-            <img src="/India-and-Kerala-Connection-Banner-image-backwaters.jpg">
-            <img src="/istockphoto-1055452170-170667a.jpg">
-            <img src="/photo-1619837374214-f5b9eb80876d.jpg">
-            <img src="/pexels-photo-3633950.jpeg">
-            <img src="/Shimla-1200-1.jpg">
-            <img src="/shimla-himachal-pradesh-india-july-260nw-1073065766.webp">
-            <img src="/Way_o_Kohima,Nagaland_India.jpg">
-            <img src="/Screenshot (158).png">
+            <img src="images/1613460373_shutterstock_1582420654-min.jpg.jpg">
+            <img src="images/225008.jpg">
+            <img src="images/225px-Munnar_hillstation_kerala.jpg">
+            <img src="images/6088_new.jpg">
+            <img src="images/Best-Places-to-Visit-in-Himachal-Pradesh-750x430.jpg">
+            <img src="images/d3451114ab4e1d55ead624930bcff60c (1).jpg">
+            <img src="images/GettyImages-149353949_high.jpg">
+            <img src="images/gettyimages-169546647-612x612.jpg">
+            <img src="images/Houseboat.avif">
+            <img src="images/images (1).jpg">
+            <img src="images/images.jpg">
+            <img src="images/India-and-Kerala-Connection-Banner-image-backwaters.jpg">
+            <img src="images/istockphoto-1055452170-170667a.jpg">
+            <img src="images/photo-1619837374214-f5b9eb80876d.jpg">
+            <img src="images/pexels-photo-3633950.jpeg">
+            <img src="images/Shimla-1200-1.jpg">
+            <img src="images/quino-al-mBQIfKlvowM-unsplash.jpg">
+            <img src="images/Way_o_Kohima,Nagaland_India.jpg">
+            <img src="images/Screenshot (158).png">
         </div>
 
         <div class="footer">
             <div>
                 <h4 style="color: white; padding: 80px 0px 0px 200px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; ">IN THE MAIN SECTION</h4>
                 <ul class="footer_list">
-                    <li><a href="tour_travel.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about_us.html">About Us</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="packages.html">Packages</a></li>
@@ -134,11 +134,11 @@
             <div>
                 <h4 style="color: white; padding: 80px 0px 0px 200px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; ">SOCIAL MEDIA</h4>
                 <ul class="footer_list" style="display:inline-flex;">
-                    <li style="margin: 5px;"><img src="/instagram.jpg" style="height: 40px; width: 40px;"></li>
-                    <li style="margin: 5px;"><img src="/facebook.png" style="height: 40px; width: 40px;"></li>
-                    <li style="margin: 5px;"><img src="/linkedin.png" style="height: 40px; width: 40px;"></li>
-                    <li style="margin: 5px;"><img src="/pintrest.jpg" style="height: 40px; width: 40px;"></li>
-                    <li style="margin: 5px;"><img src="/twitter.png" style="height: 40px; width: 40px;"></li>
+                    <li style="margin: 5px;"><img src="images/instagram.jpg" style="height: 40px; width: 40px;"></li>
+                    <li style="margin: 5px;"><img src="images/facebook.png" style="height: 40px; width: 40px;"></li>
+                    <li style="margin: 5px;"><img src="images/linkedin.png" style="height: 40px; width: 40px;"></li>
+                    <li style="margin: 5px;"><img src="images/pintrest.jpg" style="height: 40px; width: 40px;"></li>
+                    <li style="margin: 5px;"><img src="images/twitter.png" style="height: 40px; width: 40px;"></li>
                 </ul>
             </div>
 
