--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </head>
 <body>
     <div class="main">
-        <img  class = "image" src="./Screenshot (158).png">
+        <img  class = "image" src="images/Screenshot (158).png">
 
         <div class="text" style="font-size: 70px; color: white ; font-weight: 500; text-align: center">
             Let's Make Your Best <br>Trip Ever
@@ -86,37 +86,37 @@
         </a>
     </div>
 
-    <a href="/tour_travel.html" style="color: black;">
+    <a href="index.html" style="color: black;">
         <div class="place1" style="margin-top: 90px;">
-            <img src="/pexels-photo-3633950.jpeg" style="height: 300px; width: 200px; margin: 30px 0px 1px 40px;">
+            <img src="images/pexels-photo-3633950.jpeg" style="height: 300px; width: 200px; margin: 30px 0px 1px 40px;">
             <p style=" margin: 150px 0px 0px 40px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quod aliquid ipsam natus ullam vel quam asperiores quis, odio laudantium, voluptatibus voluptates deserunt enim accusamus accusantium, fuga ut? Rem, dolorem?
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ullam aperiam perferendis! Ullam provident, molestiae magnam atque pariatur id exercitationem recusandae reprehenderit consectetur minima in unde iste neque voluptatibus qui.</p>
         </div>
     </a>
 
 
-    <a href="/tour_travel.html" style="color: black;">
+    <a href="index.html" style="color: black;">
         <div class="place1">
             <p style=" margin: 150px 0px 0px 50px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quod aliquid ipsam natus ullam vel quam asperiores quis, odio laudantium, voluptatibus voluptates deserunt enim accusamus accusantium, fuga ut? Rem, dolorem?
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ullam aperiam perferendis! Ullam provident, molestiae magnam atque pariatur id exercitationem recusandae reprehenderit consectetur minima in unde iste neque voluptatibus qui.</p>
-            <img src="/photo-1619837374214-f5b9eb80876d.jpg" style="height: 300px; width: 200px; margin: 30px 40px 1px 50px;">
+            <img src="images/photo-1619837374214-f5b9eb80876d.jpg" style="height: 300px; width: 200px; margin: 30px 40px 1px 50px;">
             
         </div>  
     </a>
 
-    <a href="/tour_travel.html" style="color: black;">
+    <a href="index.html" style="color: black;">
         <div class="place1">
-            <img src="/Houseboat.avif" style="height: 300px; width: 200px; margin: 30px 0px 1px 40px;">
+            <img src="images/Houseboat.avif" style="height: 300px; width: 200px; margin: 30px 0px 1px 40px;">
             <p style=" margin: 150px 0px 0px 40px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quod aliquid ipsam natus ullam vel quam asperiores quis, odio laudantium, voluptatibus voluptates deserunt enim accusamus accusantium, fuga ut? Rem, dolorem?
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ullam aperiam perferendis! Ullam provident, molestiae magnam atque pariatur id exercitationem recusandae reprehenderit consectetur minima in unde iste neque voluptatibus qui.</p>
         </div>
     </a>
 
-    <a href="/tour_travel.html" style="color: black;">
+    <a href="index.html" style="color: black;">
         <div class="place1">
             <p style=" margin: 150px 0px 0px 50px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quod aliquid ipsam natus ullam vel quam asperiores quis, odio laudantium, voluptatibus voluptates deserunt enim accusamus accusantium, fuga ut? Rem, dolorem?
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ullam aperiam perferendis! Ullam provident, molestiae magnam atque pariatur id exercitationem recusandae reprehenderit consectetur minima in unde iste neque voluptatibus qui.</p>
-            <img src="/istockphoto-1055452170-170667a.jpg" style="height: 300px; width: 200px; margin: 30px 40px 1px 50px;">
+            <img src="images/istockphoto-1055452170-170667a.jpg" style="height: 300px; width: 200px; margin: 30px 40px 1px 50px;">
         </div>
     </a>
 
@@ -124,7 +124,7 @@
         <div>
             <h4 style="color: white; padding: 80px 0px 0px 200px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; ">IN THE MAIN SECTION</h4>
             <ul class="footer_list">
-                <li><a href="tour_travel.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about_us.html">About Us</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="packages.html">Packages</a></li>
@@ -145,11 +145,11 @@
         <div>
             <h4 style="color: white; padding: 80px 0px 0px 200px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; ">SOCIAL MEDIA</h4>
             <ul class="footer_list" style="display:inline-flex;">
-                <li style="margin: 5px;"><a href="https://www.instagram.com/?hl=en"><img src="/instagram.jpg" style="height: 40px; width: 40px;"></a></li>
-                <li style="margin: 5px;"><img src="/facebook.png" style="height: 40px; width: 40px;"></li>
-                <li style="margin: 5px;"><img src="/linkedin.png" style="height: 40px; width: 40px;"></li>
-                <li style="margin: 5px;"><img src="/pintrest.jpg" style="height: 40px; width: 40px;"></li>
-                <li style="margin: 5px;"><img src="/twitter.png" style="height: 40px; width: 40px;"></li>
+                <li style="margin: 5px;"><a href="https://www.instagram.com/?hl=en"><img src="images/instagram.jpg" style="height: 40px; width: 40px;"></a></li>
+                <li style="margin: 5px;"><img src="images/facebook.png" style="height: 40px; width: 40px;"></li>
+                <li style="margin: 5px;"><img src="images/linkedin.png" style="height: 40px; width: 40px;"></li>
+                <li style="margin: 5px;"><img src="images/pintrest.jpg" style="height: 40px; width: 40px;"></li>
+                <li style="margin: 5px;"><img src="images/twitter.png" style="height: 40px; width: 40px;"></li>
             </ul>
         </div>
 
