--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             Plan and book your perfect trip with expert advice, travel tips, destination information and inspiration from us.
         </div>
 
-        <a class="text" href="https://1010varun.github.io/tour_travel_frontend/packages.html" target="_blank" style="font-weight: bold;">
+        <a class="text" href="packages.html" target="_blank" style="font-weight: bold;">
             DISCOVER NOW
         </a>
     </div>
